--- a/index.html
+++ b/index.html
@@ -120,7 +120,7 @@
             <img class="netfliximg" src="netflix ss.png" alt="">
             <div class="title1">
             <div >Netflix Home Page</div>
-            <a href="https://soumyajit-bhowmick.github.io/Project5_Netflix-Home-Page/"></a><i id="redirect_icon"class="fa fa-external-link" aria-hidden="true"></i>
+            <a href="https://soumyajit-bhowmick.github.io/Project5_Netflix-Home-Page/"><i id="redirect_icon"class="fa fa-external-link" aria-hidden="true"></i></a>
         </div>
         </div>
         <div class="card">
